--- a/templates/humanist_app/editor_editions.html
+++ b/templates/humanist_app/editor_editions.html
@@ -8,6 +8,11 @@ Editions
 Editions
 {% endblock %}
 
+{% block breadcrumb %}
+<a href="/editor">Editor</a>
+<a href="/editor/editions">Editions</a>
+{% endblock %}
+
 {% block main %}
 
 <section class="editor-formlist">
