--- a/templates/humanist_app/editor_editions_single.html
+++ b/templates/humanist_app/editor_editions_single.html
@@ -8,6 +8,12 @@ View/Edit Edition
 View/Edit Edition
 {% endblock %}
 
+{% block breadcrumb %}
+<a href="/editor">Editor</a>
+<a href="/editor/editions">Editions</a>
+<a href="/editor/editions/{{ edition.id }}">{{ edition.subject }}</a>
+{% endblock %}
+
 {% block main %}
 
 {% if edition.sent %}
