--- a/templates/humanist_app/editor_users_unapproved.html
+++ b/templates/humanist_app/editor_users_unapproved.html
@@ -8,6 +8,12 @@ Approve Members
 Approve Members
 {% endblock %}
 
+{% block breadcrumb %}
+<a href="/editor">Editor</a>
+<a href="/editor/users">Users</a>
+<a href="/editor/users/unapproved">Approve Members</a>
+{% endblock %}
+
 {% block main %}
 <section>
 
