--- a/templates/humanist_app/user_password.html
+++ b/templates/humanist_app/user_password.html
@@ -1,18 +1,21 @@
 {% extends 'base.html' %}
 
 {% block meta_title %}
-User Update
+Change Password
 {% endblock %}
 
 {% block title %}
-User Update
+Change Password
+{% endblock %}
+
+{% block breadcrumb %}
+<a href="/user">User Panel</a>
+<a href="/user/password">Change Password</a>
 {% endblock %}
 
 {% block main %}
 <section>
-    <p>You are currently subscribed to Humanist using the email address {{request.user.email}}.</p>
-
-    <p>To change this, please type your new email below:</p>
+    <p>To change your password, please complete the following:</p>
 
     <form class="user_form" action="" method="post">
         {% csrf_token %}
