--- a/templates/humanist_app/user_unsubscribe.html
+++ b/templates/humanist_app/user_unsubscribe.html
@@ -8,6 +8,11 @@ Unsubscribe
 Unsubscribe
 {% endblock %}
 
+{% block breadcrumb %}
+<a href="/user">User Panel</a>
+<a href="/user/unsubscribe">Unsubscribe</a>
+{% endblock %}
+
 {% block main %}
 <section>
     <p>Are you sure?</p>
@@ -15,10 +20,13 @@ Unsubscribe
     <p>We're sorry to see you go, but if you no longer wish to be a member of the Humanist mailing list, you can unsubscribe here. Unsubscribing will delete your user information from our database. It will not delete your emails from any archives we have stored. To re-join, you will need to apply again.</p>
 
     <p>If you're sure, you click the button below to unsubscribe.</p>
-
+    {% if request.user.is_staff %}
+    <p class="error"><strong>Sorry, but staff members/editors cannot unsubscribe.</strong></p>
+    {% else %}
     <form class="user_form" method="post" action="/user/unsubscribe/confirm/">
         {% csrf_token %}
         <input type="submit" value="Confirm Unsubscription">
     </form>
+    {% endif %}    
 </section>
 {% endblock %}
