--- a/templates/humanist_app/user_unsubscribe_successful.html
+++ b/templates/humanist_app/user_unsubscribe_successful.html
@@ -7,6 +7,10 @@ Unsubscribed{% endblock %}
 Unsubscribed
 {% endblock %}
 
+
+{% block breadcrumb %}
+{% endblock %}
+
 {% block main %}
 <section>
     <p>You have been unsubscribed from Humanist.</p>
