--- a/templates/humanist_app/editor_editions_preview.html
+++ b/templates/humanist_app/editor_editions_preview.html
@@ -22,28 +22,11 @@ View/Edit Edition
     <form action="" method="post">
         {% csrf_token %}
         <input type="hidden" name="edition_id" value="{{edition.id}}">
-        <h2>{% if edition.subject %}{{ edition.subject }}{% else %}Untitled Edition{% endif %}</h2>
+        <h2>[Humanist] {{ current_volume }}.{{ current_issue }}: {% if edition.subject %}{{ edition.subject }}{% else %}Untitled Edition{% endif %}</h2>
 
 <pre>
-{% for email in edition.editedemail_set.all %}
-{{email.subject}} from {{ email.sender }}
-
-{{ email.body }}
-{% if email.attachments %}
--
-Attachments:
-{% for att in email.attachments %}
-{{ att.original_filename }}: {{ request.scheme }}://{{ request.get_host }}{{ att.url }} 
-{% endfor %}
-{% endif %}
-
-{% if not forloop.last %}
-
------
-
-{% endif %}
-{% endfor %}
-        </pre>
+{% include "includes/outgoing_template.html" with edition=edition %}
+</pre>
 
         <div class="controls">
             <input type="submit" name="action" value="Back">
