outgoing template tweaks

--- a/templates/includes/outgoing_template.html
+++ b/templates/includes/outgoing_template.html
@@ -22,8 +22,8 @@ Attachments:
 {% endif %}
 {% endfor %}
 _______________________________________________
-Unsubscribe at: http://www.dhhumanist.org/Restricted/listmember_interface.php
-List posts to: humanist@lists.digitalhumanities.org
-List info and archives at at: http://digitalhumanities.org/humanist
-Listmember interface at: http://digitalhumanities.org/humanist/Restricted/listmember_interface.php
-Subscribe at: http://www.digitalhumanities.org/humanist/membership_form.php
+Unsubscribe at: http://dhhumanist.org/Restricted
+List posts to: humanist@dhhumanist.org
+List info and archives at at: http://dhhumanist.org
+Listmember interface at: http://dhhumanist.org/Restricted/
+Subscribe at: http://dhhumanist.org/membership_form.php
