--- a/templates/legacy/index.html
+++ b/templates/legacy/index.html
@@ -40,41 +40,41 @@ HREF="/membership_form.php"><B>Subscribe</B></A></td>
 <center>
 <table border=1 cellspacing=5 cellpadding=5>
 <tr>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v01/">Volume 1<br> 5/87-5/88</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v02/subject.html">Volume 2<br>5/88-5/89</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v03/subject.html">Volume 3<br>5/89-5/90</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v04/subject.html">Volume 4<br>5/90-5/91</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v05/subject.html">Volume 5<br>5/91-5/92</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v06/subject.html">Volume 6<br>5/92-5/93</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v07/subject.html">Volume 7<br>5/93-5/94</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v08/subject.html">Volume 8<br>5/94-5/95</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v09/subject.html">Volume 9<br>5/95-5/96</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v10/subject.html">Volume 10<br>5/96-5/97</a></td>
+<td><a href="/Archives/Virginia/v01/">Volume 1<br> 5/87-5/88</a></td>
+<td><a href="/Archives/Virginia/v02/subject.html">Volume 2<br>5/88-5/89</a></td>
+<td><a href="/Archives/Virginia/v03/subject.html">Volume 3<br>5/89-5/90</a></td>
+<td><a href="/Archives/Virginia/v04/subject.html">Volume 4<br>5/90-5/91</a></td>
+<td><a href="/Archives/Virginia/v05/subject.html">Volume 5<br>5/91-5/92</a></td>
+<td><a href="/Archives/Virginia/v06/subject.html">Volume 6<br>5/92-5/93</a></td>
+<td><a href="/Archives/Virginia/v07/subject.html">Volume 7<br>5/93-5/94</a></td>
+<td><a href="/Archives/Virginia/v08/subject.html">Volume 8<br>5/94-5/95</a></td>
+<td><a href="/Archives/Virginia/v09/subject.html">Volume 9<br>5/95-5/96</a></td>
+<td><a href="/Archives/Virginia/v10/subject.html">Volume 10<br>5/96-5/97</a></td>
 </tr>
 
 <tr>
 <td><a
-href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v11/subject.html">Volume 11<br>5/97-5/98</a></td>
+href="/Archives/Virginia/v11/subject.html">Volume 11<br>5/97-5/98</a></td>
 <td><a
-href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v12/subject.html">Volume 12<br>5/98-5/99</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v13/subject.html">Volume 13<br>5/99-5/00</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v14/subject.html">Volume 14<br>5/00-5/01</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v15/subject.html">Volume 15<br>5/01-5/02</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v16/subject.html">Volume 16<br>5/02-5/03</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v17/subject.html">Volume 17<br>5/03-5/04</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v18/subject.html">Volume 18<br>5/04-5/05</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v19/subject.html">Volume 19<br>5/05-5/06</a></td>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v20/subject.html">Volume 20<br>5/06-5/07</a></td>
+href="/Archives/Virginia/v12/subject.html">Volume 12<br>5/98-5/99</a></td>
+<td><a href="/Archives/Virginia/v13/subject.html">Volume 13<br>5/99-5/00</a></td>
+<td><a href="/Archives/Virginia/v14/subject.html">Volume 14<br>5/00-5/01</a></td>
+<td><a href="/Archives/Virginia/v15/subject.html">Volume 15<br>5/01-5/02</a></td>
+<td><a href="/Archives/Virginia/v16/subject.html">Volume 16<br>5/02-5/03</a></td>
+<td><a href="/Archives/Virginia/v17/subject.html">Volume 17<br>5/03-5/04</a></td>
+<td><a href="/Archives/Virginia/v18/subject.html">Volume 18<br>5/04-5/05</a></td>
+<td><a href="/Archives/Virginia/v19/subject.html">Volume 19<br>5/05-5/06</a></td>
+<td><a href="/Archives/Virginia/v20/subject.html">Volume 20<br>5/06-5/07</a></td>
 </tr>
 
 
 <tr>
-<td><a href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v21/subject.html">Volume 21<br>5/07-2/08</a></td>
-<td><a href="http://www.digitalhumanities.org/cgi-bin/humanist/archive/archive.cgi?list=/Humanist.vol22.txt">Volume 22<br>5/08--</a></td>
+<td><a href="/Archives/Virginia/v21/subject.html">Volume 21<br>5/07-2/08</a></td>
+<td><a href="/Archives/Current/Humanist.vol22.txt">Volume 22<br>5/08--</a></td>
 <td colspan=2 align=center><a href="text.html">Plain text files, 5/87-2/08</a></td>
 <td colspan=2 align=center><a href="http://lists.digitalhumanities.org/pipermail/humanist/">10/08 - present<br>Mailman Archive</td>
-<td colspan=2 align=center><a href="http://www.digitalhumanities.org/cgi-bin/humanist/archive/archive.cgi">2/08 - present<br>ArchTracker Display</a></td>
-<td colspan=2 align=center><a href="http://www.digitalhumanities.org/humanist/Archives/Current">7/08 - present<br>Plain Text Files</td>
+<td colspan=2 align=center><a href="#">2/08 - present<br>ArchTracker Display</a></td>
+<td colspan=2 align=center><a href="/Archives/Current/">7/08 - present<br>Plain Text Files</td>
 </tr>
 
 </table></center>
