forms now open in new window

--- a/templates/humanist_app/editor.html
+++ b/templates/humanist_app/editor.html
@@ -61,7 +61,7 @@ Editor Interface
 
 
     {% if emails.inbox.count %}
-    <form action="" method="post">
+    <form action="" target="_blank" method="post">
         {% csrf_token %}
         <table>
             <tr>
