--- a/templates/humanist_app/editor_editions_preview.html
+++ b/templates/humanist_app/editor_editions_preview.html
@@ -17,12 +17,17 @@ View/Edit Edition
 
 {% block main %}
 
-
+{% if error %}
+    <div class="error">{{error}}</div>
+    {% endif %}
 <section>
+
+    
     <form action="" method="post">
         {% csrf_token %}
         <input type="hidden" name="edition_id" value="{{edition.id}}">
         <h2>[Humanist] {{ current_volume }}.{{ current_issue }}: {% if edition.subject %}{{ edition.subject }}{% else %}Untitled Edition{% endif %}</h2>
+    
 
 <pre>
 {% include "includes/outgoing_template.html" with edition=edition %}
