more dh references

--- a/templates/includes/outgoing_template.html
+++ b/templates/includes/outgoing_template.html
@@ -1,7 +1,7 @@
                   Humanist Discussion Group, Vol. {{ edition.volume }}, No. {{ edition.issue }}.
             Department of Digital Humanities, King's College London
-                       www.digitalhumanities.org/humanist
-                Submit to: humanist@lists.digitalhumanities.org
+                       www.dhhumanist.org
+                Submit to: humanist@dhhumanist.org
 
 {% if edition.data.emails|length > 1 %}
 {% for email in edition.data.emails %}
