--- a/templates/humanist_app/editor.html
+++ b/templates/humanist_app/editor.html
@@ -80,7 +80,7 @@ Editor Interface
             </tr>
 
             <!-- emails -->
-            {% for email in emails.inbox %}
+            {% for email in email_display %}
             <tr>
                 <td><input type="checkbox" name="email_id" value="{{email.id}}"></td>
                 <td class="date">{{ email.date }}</td>
@@ -114,6 +114,25 @@ Editor Interface
             </select>
             <input type="submit" name="action" value="Add"> 
             {% endif %}
+
+
+        <div class="pagination">
+            <span class="step-links">
+                {% if email_display.has_previous %}
+                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page={{ email_display.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ email_display.number }} of {{ email_display.paginator.num_pages }}.
+                </span>
+
+                {% if email_display.has_next %}
+                    <a href="?page={{ email_display.next_page_number }}">next</a>
+                    <a href="?page={{ email_display.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
         </div>
     {% else %}
     <p>There are no new emails</p>
