--- a/templates/legacy/index.html
+++ b/templates/legacy/index.html
@@ -38,6 +38,7 @@ HREF="/membership_form.php"><B>Subscribe</B></A></td>
 <font size=+1> <p><strong><i>Humanist</i></strong> is an international seminar on digital humanities founded in 1987. Its aim is to provide a forum for discussion of intellectual, scholarly, pedagogical, and social issues and for exchange of information among participants. <i>Humanist</i> is a publication of the Alliance of Digital Humanities Organizations (<a href="http://www.digitalhumanities.org/">ADHO</a>) and an affiliated publication of the American Council of Learned Societies (<a href="http://www.acls.org/">ACLS</a>). For more information on the activities of the world-wide digital humanities community and for ways to get involved see the <a href="http://www.digitalhumanities.org/">ADHO website</a>. To apply for membership, click on 'Subscribe', above.</p>
 <font size><br>
 <center>
+<header><h3>Archives (1988-2018)</h3></header>
 <table border=1 cellspacing=5 cellpadding=5>
 <tr>
 <td><a href="/Archives/Virginia/v01/">Volume 1<br> 5/87-5/88</a></td>
@@ -72,12 +73,36 @@ href="/Archives/Virginia/v12/subject.html">Volume 12<br>5/98-5/99</a></td>
 <td><a href="/Archives/Virginia/v21/subject.html">Volume 21<br>5/07-2/08</a></td>
 <td><a href="/Archives/Current/Humanist.vol22.txt">Volume 22<br>5/08--</a></td>
 <td colspan=2 align=center><a href="text.html">Plain text files, 5/87-2/08</a></td>
-<td colspan=2 align=center><a href="http://lists.digitalhumanities.org/pipermail/humanist/">10/08 - present<br>Mailman Archive</td>
+<td colspan=2 align=center><a href="http://lists.digitalhumanities.org/pipermail/humanist/">10/08 - 18<br>Mailman Archive</td>
 <td colspan=2 align=center><a href="#">2/08 - present<br>ArchTracker Display</a></td>
-<td colspan=2 align=center><a href="/Archives/Current/">7/08 - present<br>Plain Text Files</td>
+<td colspan=2 align=center><a href="/Archives/Current/">7/08 - 18<br>Plain Text Files</td>
 </tr>
 
 </table></center>
+
+<p>
+<center>
+<header><h3>Archives (2018-present)</h3></header>
+<table border=1 cellspacing=5 cellpadding=5>
+<tr>
+
+{% for volume in volumes %}
+    
+    <td><a href="/volume/{{volume}}/">Volume {{volume}}</a></td>
+
+    {# if the the forloop counter is divisible by 4, close the <li> tag and open a new one #}
+    {% if forloop.counter|divisibleby:4 and not forloop.last %}
+    </tr>
+    <tr>
+    {% endif %}
+
+    {% endfor %}
+
+</tr>
+
+</table></center>
+
+
 <br><br>
 <p><b>Editor</b>: <a href="http://www.mccarty.org.uk">Willard McCarty</a> (King's College London, U.K.; Western Sydney University, Australia) <br> 
 <b>Software designer</b>: <a href="http://www.mind-crafts.com/aboutus.html">Malgosia Askanas</a> (Mind-Crafts)</p>
