Quack related mishap

--- a/templates/legacy/issue.html
+++ b/templates/legacy/issue.html
@@ -17,7 +17,7 @@ HREF="/membership_form.php"><B>Subscribe</B></A></td>
 </center>
 <br>
 
-<center><a href="quack.html"><img src="{% static 'images/humanist.gif' %}" alt="Humanist Discussion Group" border=off></a></center><br><br>
+<center><a href="/quack.html"><img src="{% static 'images/humanist.gif' %}" alt="Humanist Discussion Group" border=off></a></center><br><br>
 <a href="/volume/{{volume}}">< Back to Volume {{volume}}</a>
 <center>
     <header><h2>Humanist Archives: {{edition.date_sent}} Humanist {{edition.volume}}.{{edition.issue}} - {{edition.subject}}</h2></header>
