--- a/templates/legacy/volume.html
+++ b/templates/legacy/volume.html
@@ -17,7 +17,7 @@ HREF="/membership_form.php"><B>Subscribe</B></A></td>
 </center>
 <br>
 
-<center><a href="quack.html"><img src="{% static 'images/humanist.gif' %}" alt="Humanist Discussion Group" border=off></a></center><br><br>
+<center><a href="/quack.html"><img src="{% static 'images/humanist.gif' %}" alt="Humanist Discussion Group" border=off></a></center><br><br>
 <center>
     <header><h2>Humanist Archives: Volume {{volume}}</h2></header>
 </center>
