--- a/templates/includes/outgoing_template.html
+++ b/templates/includes/outgoing_template.html
@@ -1,5 +1,6 @@
                   Humanist Discussion Group, Vol. {{ edition.volume }}, No. {{ edition.issue }}.
             Department of Digital Humanities, King's College London
+             King's Digital Lab, King's College London
                        www.dhhumanist.org
                 Submit to: humanist@dhhumanist.org
 
