--- a/templates/legacy/index.html
+++ b/templates/legacy/index.html
@@ -35,7 +35,9 @@ HREF="/membership_form.php"><B>Subscribe</B></A></td>
 
 
 <p>
-<font size=+1> <p><strong><i>Humanist</i></strong> is an international seminar on digital humanities founded in 1987. Its aim is to provide a forum for discussion of intellectual, scholarly, pedagogical, and social issues and for exchange of information among participants. <i>Humanist</i> is a publication of the Alliance of Digital Humanities Organizations (<a href="http://www.digitalhumanities.org/">ADHO</a>) and an affiliated publication of the American Council of Learned Societies (<a href="http://www.acls.org/">ACLS</a>). For more information on the activities of the world-wide digital humanities community and for ways to get involved see the <a href="http://www.digitalhumanities.org/">ADHO website</a>. To apply for membership, click on 'Subscribe', above.</p>
+<font size=+1> <p><strong><i>Humanist</i></strong> is an international seminar on digital humanities founded in 1987. Its aim is to provide a forum for discussion of intellectual, scholarly, pedagogical, and social issues and for exchange of information among participants. <i>Humanist</i> is a <a href="//kcl.ac.uk">King's College London</a> publication allied with the Alliance of Digital Humanities Organizations (<a href="http://www.digitalhumanities.org/">ADHO</a>). To apply for membership, click on 'Subscribe', above.</p>
+
+
 <font size><br>
 <center>
 <header><h3>Archives (1987-2018)</h3></header>
