Adding link to Cologne in membership form

--- a/templates/legacy/membership_form.html
+++ b/templates/legacy/membership_form.html
@@ -51,97 +51,8 @@ HREF="/membership_form.php"><B>Subscribe</B></A></td>
 
 <p><br>
 
-{%if success %}
-<span class="ast">{{success}}</span>
+	Humanist has now moved. To subscribe, please click <a href="https://dhhumanist.org/membership_form.php">here</a>.
 
-{% else %}
-	{% if error %}
-	<span class="ast">{{error}}</span>
-	{% endif %}
-
-	Please fill out this form and submit it.   The fields marked <span class=ast>*</span> are obligatory.
-{% endif %}
-<p><br>
-<form action="" method="post">
-{% csrf_token %}
-<input type="hidden" name="type" value="">
-<table class=f>
-<tr>
-<td class=t>
-<b>First Name: <span class=ast>*</span></b>
-</td>
-<td>
-<input type="text" name="firstname" size="40" maxlength="80" style="font-family: Helvetica, Arial, sans-serif" value="{{firstname}}">
-</td>
-</tr>
-<tr>
-<td class=t>
-<b>Last Name: <span class=ast>*</span></b>
-</td>
-<td>
-<input type="text" name="lastname" size="40" maxlength="80" style="font-family: Helvetica, Arial, sans-serif" value="{{lastname}}">
-</td>
-</tr>
-<tr>
-<td class=t>
-<b>Middle Initial:</b>
-</td>
-<td>
-<input type="text" name="middleinit" size="3" maxlength="3" style="font-family: Helvetica, Arial, sans-serif" value="">
-</td>
-</tr>
-<tr>
-<td class=t>
-<b>Email: <span class=ast>*</span></b>
-</td>
-<td>
-<input type="text" name="email" size="40" maxlength="50" style="font-family: Helvetica, Arial, sans-serif" value="{{email}}">
-</td>
-</tr>
-<tr>
-<td class=t>
-<b>Desired Password: <span class=ast>*</span></b>
-</td>
-<td>
-<input type="password" name="password" size="20" maxlength="20" style="font-family: Helvetica, Arial, sans-serif" value="">
-</td>
-</tr>
-<tr>
-<td class=t>
-<b>Retype Password: <span class=ast>*</span></b>
-</td>
-<td>
-<input type="password" name="password2" size="20" maxlength="20" style="font-family: Helvetica, Arial, sans-serif" value="">
-</td>
-</tr>
-<tr>
-<td class=t>
-<b>URL:</b>
-</td>
-<td>
-<input type="text" name="url" size="80" maxlength="200" style="font-family: Helvetica, Arial, sans-serif" value="">
-</td>
-</tr>
-<tr>
-<td class=t>
-<b>Short Bio: <span class=ast>*</span></b>
-</td>
-<td>
-<textarea name="bioblurb" rows=20 cols=80 wrap="hard" style="font-family: Helvetica, Arial, sans-serif">{{bioblurb}}</textarea>
-<p><br>
-</td>
-</tr>
-<tr>
-<td class=t>
-<b>&nbsp;</b>
-</td>
-<td>
-<input type="submit" value="SUBMIT FORM">
-
-</td>
-</tr>
-</table>
-</form>
 
 <p>This site is <a href="//kdl.kcl.ac.uk/how-we-work/kdl-designed-developed-and-maintained/">maintained</a> under a service level agreement by <a href="//kdl.kcl.ac.uk/">King's Digital Lab</a>.
 
